<resources>
    <string name="app_name">Rau củ xanh</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_notifications">Thông báo</string>
    <string name="title_bookmarks">Yêu thích</string>
    <string name="title_about">Thông tin của tôi</string>
    <string name="title_change_password">Đổi mật khẩu mới</string>
    <string name="title_thong_tin_ca_nhan">Thông tin cá nhân</string>
    <string name="user_name">Hảo hán</string>
    <string name="user_email">dacbubulmao@gmail.com</string>
    <string name="user_phone_no">0987654321</string>
    <string name="user_birth_date">12/03/2000</string>
    <string name="don_hang">Đơn hàng</string>
    <string name="don_hang_sub">Xem lịch sử đơn hàng của bạn</string>
    <string name="doi_thong_tin_ca_nhan">Đổi thông tin cá nhân</string>
    <string name="doi_thong_tin_ca_nhan_sub">Thay đổi tên, số điện thoại, email,…</string>
    <string name="thong_ke">Thống kê</string>
    <string name="thong_ke_sub">Doanh thu của bạn trong tháng</string>
    <string name="bao_mat">Bảo mật</string>
    <string name="bao_mat_sub">Thay đổi mật khẩu</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="dang_xuat_sub">Quay trở lại màn hình đăng nhập</string>
    <string name="noti_new">NEW</string>
    <string name="noti_sample_heading">Đơn đặt hàng số 123456789 của bạn đã được xác nhận</string>
    <string name="noti_sample_sub">Đơn hàng của bạn sẽ được giao tới trong vòng 3–4 ngày tiếp theo.</string>
    <string name="yeu_thich">Yêu thích</string>
    <string name="ot_chuong_200g">Ớt chuông (200g)</string>
    <string name="_10_000_vnd">10.000 VND</string>
    <string name="ban_can_tim_gi">Bạn cần tìm gì?</string>
    <string name="ho_ten">Họ Tên :</string>
    <string name="email">Email :</string>
    <string name="gioi_tinh">Giới tính :</string>
    <string name="ngay_sinh">Ngày sinh :</string>
    <string name="cap_nhat">Cập nhật</string>
    <string name="doi_mat_khau_moi">Đổi mật khẩu mới</string>
    <string name="doi_mat_khau_moi_sub">Sử dụng mật khẩu dài hoặc cụm mật khẩu phức tạp và kết hợp chữ hoa, chữ thường, số và ký hiệu.
Không sử dụng lại mật khẩu</string>
    <string name="mat_khau_cu">Nhập mật khẩu cũ</string>
    <string name="mat_khau_moi">Nhập mật khẩu mới</string>
    <string name="nhap_lai_mat_khau_moi">Nhập lại mật khẩu mới</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>