<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.finaltest.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_bookmarks"
        android:name="com.example.finaltest.ui.bookmarks.BookmarksFragment"
        android:label="@string/title_bookmarks"
        tools:layout="@layout/fragment_bookmarks" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.finaltest.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.example.finaltest.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/action_navigation_about_to_thongTinCuaToiFragment"
            app:destination="@id/thongTinCuaToiFragment" />
        <action
            android:id="@+id/action_navigation_about_to_changePasswordFragment"
            app:destination="@id/changePasswordFragment" />
        <action
            android:id="@+id/action_navigation_about_to_chiTieuThangFragment"
            app:destination="@id/chiTieuThangFragment" />
    </fragment>
    <fragment
        android:id="@+id/thongTinCuaToiFragment"
        android:name="com.example.finaltest.ui.about.thong_tin_cua_toi.ThongTinCuaToiFragment"
        android:label="ThongTinCuaToiFragment" >
        <action
            android:id="@+id/action_thongTinCuaToiFragment_to_navigation_about"
            app:destination="@id/navigation_about" />
    </fragment>
    <fragment
        android:id="@+id/changePasswordFragment"
        android:name="com.example.finaltest.ui.about.change_password.ChangePasswordFragment"
        android:label="ChangePasswordFragment" >
        <action
            android:id="@+id/action_changePasswordFragment_to_navigation_about"
            app:destination="@id/navigation_about" />
    </fragment>
    <fragment
        android:id="@+id/chiTieuThangFragment"
        android:name="com.example.finaltest.ui.about.chi_tieu_thang.ChiTieuThangFragment"
        android:label="ChiTieuThangFragment" >
        <action
            android:id="@+id/action_chiTieuThangFragment_to_navigation_about"
            app:destination="@id/navigation_about" />
    </fragment>
</navigation>