<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/return_to_about_title"/>

    <ScrollView
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_marginTop="5dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/user_avatar"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                app:strokeWidth="1dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/user_name"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="30sp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_marginStart="10dp"
                        android:textSize="16sp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ho_ten" />

                    <TextView
                        android:layout_marginStart="10dp"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:id="@+id/text_user_name"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/user_name" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_marginStart="10dp"
                        android:textSize="16sp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email" />

                    <TextView
                        android:layout_marginStart="10dp"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:id="@+id/text_user_email"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/user_email" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/flag" />

                    <TextView
                        android:layout_marginStart="10dp"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:id="@+id/text_user_phone_no"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/user_phone_no" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_marginStart="10dp"
                        android:textSize="16sp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gioi_tinh" />

                    <TextView
                        android:layout_marginStart="10dp"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:id="@+id/text_user_gioi_tinh"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/user_name" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:text="@string/ngay_sinh"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/text_user_ngay_sinh"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:text="@string/user_birth_date"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        app:srcCompat="@drawable/ic_baseline_calendar_today_24" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_cap_nhat"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:shadowColor="@color/green_500"
            android:text="@string/cap_nhat" />
    </LinearLayout>

</LinearLayout>