<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.nhom12.rau_cu_xanh.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_chiTietSanPhamFragment"
            app:destination="@id/chiTietSanPhamFragment" />
        <action
            android:id="@+id/action_navigation_home_to_khuyenMaiFragment"
            app:destination="@id/khuyenMaiFragment" />
        <action
            android:id="@+id/action_navigation_home_to_cartFragment"
            app:destination="@id/cartFragment" />
        <action
            android:id="@+id/action_navigation_home_to_traiCayFragment"
            app:destination="@id/traiCayFragment"
            app:popUpTo="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_bookmarks"
        android:name="com.nhom12.rau_cu_xanh.ui.bookmarks.BookmarksFragment"
        android:label="@string/title_bookmarks"
        tools:layout="@layout/fragment_bookmarks" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.nhom12.rau_cu_xanh.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.nhom12.rau_cu_xanh.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/action_navigation_about_to_thongTinCuaToiFragment"
            app:destination="@id/thongTinCuaToiFragment" />
        <action
            android:id="@+id/action_navigation_about_to_changePasswordFragment"
            app:destination="@id/changePasswordFragment" />
        <action
            android:id="@+id/action_navigation_about_to_chiTieuThangFragment"
            app:destination="@id/chiTieuThangFragment" />
        <action
            android:id="@+id/action_navigation_about_to_donHangFragment"
            app:destination="@id/donHangFragment" />
    </fragment>
    <fragment
        android:id="@+id/thongTinCuaToiFragment"
        android:name="com.nhom12.rau_cu_xanh.ui.about.thong_tin_cua_toi.ThongTinCuaToiFragment"
        android:label="ThongTinCuaToiFragment" >
        <action
            android:id="@+id/action_thongTinCuaToiFragment_to_navigation_about"
            app:destination="@id/navigation_about"
            app:popUpTo="@id/navigation_about" />
    </fragment>
    <fragment
        android:id="@+id/changePasswordFragment"
        android:name="com.nhom12.rau_cu_xanh.ui.about.change_password.ChangePasswordFragment"
        android:label="ChangePasswordFragment" >
        <action
            android:id="@+id/action_changePasswordFragment_to_navigation_about"
            app:destination="@id/navigation_about"
            app:popUpTo="@id/navigation_about" />
    </fragment>
    <fragment
        android:id="@+id/chiTieuThangFragment"
        android:name="com.nhom12.rau_cu_xanh.ui.about.chi_tieu_thang.ChiTieuThangFragment"
        android:label="ChiTieuThangFragment" >
        <action
            android:id="@+id/action_chiTieuThangFragment_to_navigation_about"
            app:destination="@id/navigation_about"
            app:popUpTo="@id/navigation_about" />
    </fragment>
    <fragment
        android:id="@+id/chiTietSanPhamFragment"
        android:name="com.nhom12.rau_cu_xanh.ui.home.chitietsanpham.ChiTietSanPhamFragment"
        android:label="ChiTietSanPhamFragment" >
        <action
            android:id="@+id/action_chiTietSanPhamFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home" />
        <action
            android:id="@+id/action_chiTietSanPhamFragment_to_reviewFragment"
            app:destination="@id/reviewFragment" />
        <action
            android:id="@+id/action_chiTietSanPhamFragment_to_storeFragment"
            app:destination="@id/storeFragment" />
    </fragment>
    <fragment
        android:id="@+id/donHangFragment"
        android:name="com.nhom12.rau_cu_xanh.ui.about.donhang.DonHangFragment"
        android:label="DonHangFragment" >
        <action
            android:id="@+id/action_donHangFragment_to_navigation_about"
            app:destination="@id/navigation_about"
            app:popUpTo="@id/navigation_about" />
        <action
            android:id="@+id/action_donHangFragment_to_chiTietHoaDonFragment"
            app:destination="@id/chiTietHoaDonFragment" />
    </fragment>
    <fragment
        android:id="@+id/chiTietHoaDonFragment"
        android:name="com.nhom12.rau_cu_xanh.ui.chitiethoadon.ChiTietHoaDonFragment"
        android:label="ChiTietHoaDonFragment" >
        <action
            android:id="@+id/action_chiTietHoaDonFragment_to_donHangFragment"
            app:destination="@id/donHangFragment" />
    </fragment>
    <fragment
        android:id="@+id/khuyenMaiFragment"
        android:name="com.nhom12.rau_cu_xanh.ui.home.khuyenmai.KhuyenMaiFragment"
        android:label="KhuyenMaiFragment" >
        <action
            android:id="@+id/action_khuyenMaiFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/reviewFragment"
        android:name="com.nhom12.rau_cu_xanh.ui.review.ReviewFragment"
        android:label="ReviewFragment" >
        <action
            android:id="@+id/action_reviewFragment_to_chiTietSanPhamFragment"
            app:destination="@id/chiTietSanPhamFragment" />
    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.nhom12.rau_cu_xanh.ui.cart.CartFragment"
        android:label="CartFragment" >
        <action
            android:id="@+id/action_cartFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/storeFragment"
        android:name="com.nhom12.rau_cu_xanh.ui.store.StoreFragment"
        android:label="StoreFragment" >
        <action
            android:id="@+id/action_storeFragment_to_chiTietSanPhamFragment"
            app:destination="@id/chiTietSanPhamFragment" />
    </fragment>
    <fragment
        android:id="@+id/traiCayFragment"
        android:name="com.nhom12.rau_cu_xanh.ui.home.traicay.TraiCayFragment"
        android:label="TraiCayFragment" >
        <action
            android:id="@+id/action_traiCayFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>